infrastructure/k8s/nextjs-ci-cd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-ci-cd-service
spec:
  type: LoadBalancer
  selector:
    app: nextjs-ci-cd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
